# aiogram_bot_template

./: .env.dist  .gitignore  bot.py  docker-compose.yml  pyproject.toml
app/core/: __init__.py  config.py  database.py  loader.py
app/db_api/crud/: base_crud.py  users.py
app/db_api/models/: __init__.py  users.py
app/schemas/: users.py
app/tg_bot/handlers/: register_all_handlers.py
app/tg_bot/handlers/users/: start.py
core/: __init__.py  config.py  loader.py
migrations/: env.py
migrations/versions/: 1bc517e9dc42_add_unique_for_field_user_id_and_.py  e58cc8095225_init.py
tg_bot/handlers/: register_all_handlers.py
tg_bot/handlers/users/: __init__.py  admin.py  start.py
