[tool.poetry]
name = "aiogram_bot_template"
version = "0.1.0"
description = ""
authors = ["Dmitry <dz5011@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
